--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
                   class="slider-image"
                   alt="Project Two Image 1"
                 />
+                <img
+                  src="b2.jpg"
+                  class="slider-image"
+                  alt="Project Two Image 1"
+                />
                 <button
                   class="btn btn-sm btn-secondary prev-btn"
                   data-slider="slider2"
@@ -342,3 +347,4 @@
   </script>
 </body>
 </html>
+
